// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t0] vision pass attempted without promises then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/8
   │  ├─ slug = has-questioned-fundamentals
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  did we reason from first principles or from convention?
   │  │  
   │  │    for this vision, ask:
   │  │    - what are the fundamental truths here that we know are true?
   │  │    - do we build from those truths, or from "how it's usually done"?
   │  │    - if we started from scratch with only the fundamentals, what would we build?
   │  │    - what would this cost if we broke it down to raw materials/components?
   │  │  
   │  │    ensure we solve the right problem, not just the familiar one.
   │  │
   │  └─
   │
   ├─ after you finish 🪷
   │  ├─
   │  │
   │  │  - did you check slowly, step by step?
   │  │  - did you take your time, or rush through?
   │  │  - have you been honest with yourself?
   │  │  - if you found issues, fix them before you promise
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 1.vision --as promised --that has-questioned-fundamentals[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t1] vision pass attempted after promises and approval then: allowed 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself
   └─ ✓ judge.1 - passed 3.4s

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ 1.vision.md
      └─ judges
          └─ j1: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
              └─ finished 3.4s ✓"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t2] criteria pass attempted without promise then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 2.1.criteria.blackbox
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/4
   │  ├─ slug = has-questioned-requirements
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  are any criteria unnecessary or misdirected?
   │  │  
   │  │    for each criterion, ask:
   │  │    - who said this was needed? when? why?
   │  │    - what if we removed this criterion — what would break?
   │  │    - is this criterion scope too large or too small?
   │  │    - could we test the same behavior more simply?
   │  │  
   │  │    challenge each criterion and justify why it belongs.
   │  │
   │  └─
   │
   ├─ after you finish 🪷
   │  ├─
   │  │
   │  │  - did you check slowly, step by step?
   │  │  - did you take your time, or rush through?
   │  │  - have you been honest with yourself?
   │  │  - if you found issues, fix them before you promise
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 2.1.criteria.blackbox --as promised --that has-questioned-requirements[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t3] criteria pass attempted with promise but no approval then: blocked by judge 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself
   └─ ✗ judge.1 - failed 3.0s

🗿 route.stone.set
   ├─ stone = 2.1.criteria.blackbox
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ 2.1.criteria.blackbox.i1.md
      └─ judges
          └─ j1: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished 3.0s ✗
              └─ reason: wait for human approval[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m
[0m[31m🔎 judge 1
   ├─
   │
   │  🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.judge
   │  
   │  passed: false
   │  reason: wait for human approval
   │  
   │  ✋ halted, human approval required
   │     ├─ please ask your human to
   │     │  └─ rhx route.stone.set --stone 2.1.criteria.blackbox --as approved
   │     │
   │     └─ after human approves, run
   │        └─ rhx route.stone.set --stone 2.1.criteria.blackbox --as passed
   │  
   │  [0m[31m[0m
   │  [0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.judge[0m
   │  [0m[31m   └─ ✋ blocked by constraints[0m
   │  [0m[31m[0m
   │  
   │  exit code: 1
   │
   └─[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t4] criteria pass attempted after approval then: allowed 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself
   └─ ✓ judge.1 - passed 1.9s

🗿 route.stone.set
   ├─ stone = 2.1.criteria.blackbox
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ 2.1.criteria.blackbox.i1.md
      └─ judges
          └─ j1: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
              └─ finished 1.9s ✓"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t5] blueprint pass attempted without promises then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 3.3.blueprint.v1
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/10
   │  ├─ slug = has-questioned-deletables
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  try hard to delete before you optimize:
   │  │  
   │  │    for each component, ask:
   │  │    - can this be removed entirely?
   │  │    - if we deleted this and had to add it back, would we?
   │  │    - did we optimize a component that shouldn't exist?
   │  │    - what is the simplest version that works?
   │  │  
   │  │    delete and simplify before we proceed.
   │  │
   │  └─
   │
   ├─ after you finish 🪷
   │  ├─
   │  │
   │  │  - did you check slowly, step by step?
   │  │  - did you take your time, or rush through?
   │  │  - have you been honest with yourself?
   │  │  - if you found issues, fix them before you promise
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 3.3.blueprint.v1 --as promised --that has-questioned-deletables[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t6] blueprint pass attempted with promises but no approval then: blocked by judge 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself
   └─ ✗ judge.1 - failed 2.1s

🗿 route.stone.set
   ├─ stone = 3.3.blueprint.v1
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ 3.3.blueprint.v1.i1.md
      └─ judges
          └─ j1: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished 2.1s ✗
              └─ reason: wait for human approval[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m
[0m[31m🔎 judge 1
   ├─
   │
   │  🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.judge
   │  
   │  passed: false
   │  reason: wait for human approval
   │  
   │  ✋ halted, human approval required
   │     ├─ please ask your human to
   │     │  └─ rhx route.stone.set --stone 3.3.blueprint.v1 --as approved
   │     │
   │     └─ after human approves, run
   │        └─ rhx route.stone.set --stone 3.3.blueprint.v1 --as passed
   │  
   │  [0m[31m[0m
   │  [0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.judge[0m
   │  [0m[31m   └─ ✋ blocked by constraints[0m
   │  [0m[31m[0m
   │  
   │  exit code: 1
   │
   └─[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t7] blueprint pass attempted after approval then: allowed 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself
   └─ ✓ judge.1 - passed 1.9s

🗿 route.stone.set
   ├─ stone = 3.3.blueprint.v1
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ 3.3.blueprint.v1.i1.md
      └─ judges
          └─ j1: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
              └─ finished 1.9s ✓"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t8] execution pass attempted without promises then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 5.1.execution.phase0_to_phaseN.v1
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/4
   │  ├─ slug = behavior-declaration-coverage
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  review for coverage of the behavior declaration.
   │  │  
   │  │    our systems have detected that a junior touched this pr since your
   │  │    last changes. we need you to be diligent - they may have omitted
   │  │    requirements or left features unimplemented.
   │  │  
   │  │    go through the behavior's vision, criteria, and blueprint, then check
   │  │    each requirement against the code line by line:
   │  │    - is every requirement from the vision addressed?
   │  │    - is every criterion from the criteria satisfied?
   │  │    - is every component from the blueprint implemented?
   │  │    - did the junior skip or forget any part of the spec?
   │  │  
   │  │    emit your findings to .behavior/$thisBehavior/reviews/{stone}.behavior-declaration-coverage.md
   │  │    then fix all gaps before you continue.
   │  │
   │  └─
   │
   ├─ after you finish 🪷
   │  ├─
   │  │
   │  │  - did you check slowly, step by step?
   │  │  - did you take your time, or rush through?
   │  │  - have you been honest with yourself?
   │  │  - if you found issues, fix them before you promise
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 5.1.execution.phase0_to_phaseN.v1 --as promised --that behavior-declaration-coverage[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t9] execution pass attempted after promises then: allowed (no judges) 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself

🗿 route.stone.set
   └─ stone = 5.1.execution.phase0_to_phaseN.v1
   └─ passage = allowed (artifacts only)"
`;
